# frida-rust

./: .gitignore  CLAUDE.md  Cargo.toml  justfile  rustfrida-7day-tutorial.md  snapshot_maps.txt
.cargo/: config.toml
docs/: brk_callback_hook.html  detection-fingerprints.md  mm_struct_tutorial.html  shadow_jump_hook.html
examples/agent/: Cargo.toml
examples/agent-host/: Cargo.toml
examples/agent-host/src/: main.rs
examples/agent-protocol/: Cargo.toml
examples/agent-protocol/src/: frame.rs  lib.rs  message.rs
examples/agent/.cargo/: config.toml
examples/agent/src/: js.rs  lib.rs
examples/injector/: Cargo.toml
examples/injector/loader/: loader.c
examples/injector/src/: inject.rs  injector.rs  main.rs  memfd.rs  payload.rs  proc.rs  ptrace.rs  state.rs
examples/scripts/: test_nohook.js  test_spawn.js
examples/zymbiote/: Cargo.toml
examples/zymbiote/src/: elf.rs  injector.rs  main.rs  mem.rs  patcher.rs  payload.rs  ptrace.rs  remote.rs  remote_inject.rs  wx.rs
examples/zymbiote/stub/: Makefile  stub.S
ldmonitor/: Cargo.toml  build.rs
ldmonitor-common/: Cargo.toml
ldmonitor-common/src/: lib.rs
ldmonitor-ebpf/: Cargo.toml
ldmonitor-ebpf/src/: main.rs
ldmonitor/src/: lib.rs  main.rs
quickjs-hook/: Cargo.toml  build.rs  setup_quickjs.sh
quickjs-hook/src/: arm64_relocator.c  arm64_relocator.h  arm64_writer.c  arm64_writer.h  context.rs  ffi.rs  hook_engine.c  hook_engine.h  lib.rs  quickjs_wrapper.c  quickjs_wrapper.h  runtime.rs  so_hide.c  so_hide.h  value.rs
quickjs-hook/src/jsapi/: console.rs  hook_api.rs  interceptor.rs  memory.rs  mod.rs  module_api.rs  process.rs  ptr.rs  send.rs  wxshadow.rs
tests/: test_pwrite.c  test_raw_syscall.c
