[workspace]
resolver = "2"
members = [
    "frida-gum-sys",
    "frida-gum",
    "frida-sys",
    "frida",
    "examples/core/*",
    "examples/gum/*",
    "examples/agent-protocol",
    "examples/agent",
    "examples/agent-host",
    "examples/zymbiote",
    "examples/injector",
    "ldmonitor",
    "ldmonitor-common",
    "ldmonitor-ebpf",
]
exclude = ["quickjs-hook"]
# We miss our linux_no_std example from the default members since `cargo check`
# and `cargo test` both attempt to link the `std` library into it in error.
default-members = ["frida-gum-sys", "frida-gum", "frida-sys", "frida"]

[workspace.package]
version = "0.17.0"
authors = [
    "Keegan Saunders <keegan@undefinedbehaviour.org>",
    "Shmarya Rubenstein <github@shmarya.net>",
]
edition = "2021"
license = "wxWindows"
repository = "https://github.com/frida/frida-rust"
description = "Rust bindings for Frida"

[workspace.dependencies]
anyhow = "1"
aya = "0.13"
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
aya-build = "0.1"
bytes = "1"
cargo_metadata = "0.19"
clap = "4"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
tokio = "1"
which = "7"
