[package]
name = "ldmonitor-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
ldmonitor-common = { path = "../ldmonitor-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "ldmonitor"
path = "src/main.rs"
