[package]
name = "agent"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "XiaM"
crate-type = ["cdylib"]

[features]
default = ["tcp"]
tcp = []

[dependencies]
agent-protocol = { path = "../agent-protocol" }
serde_json = "1"

[target.'cfg(target_os = "android")'.dependencies]
quickjs-hook = { path = "../../quickjs-hook" }
